objects/SO_Programme__c.object
<CustomObject>
    <description>Define a programme of work, like a Sales programme.</description>
    <label>Programme</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Manufacturer__c.Name</field>
                <operation>equals</operation>
                <value>Jaguar,Land Rover,Daimler</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Programmes</relationshipLabel>
        <relationshipName>Programmes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_JLR_Classic__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Programmes</relationshipLabel>
        <relationshipName>Programmes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Out of Production</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Capacity__c</fullName>
        <label>Build Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Record if the programme is currently active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Style</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Body_Style__c</referenceTo>
        <relationshipLabel>Programmes</relationshipLabel>
        <relationshipName>Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Series__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>Programmes</relationshipLabel>
        <relationshipName>Programmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <label>Product Offering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Product_Offering</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SO_Classic</fullName>
        <active>true</active>
        <label>Classic</label>
    </recordTypes>
</CustomObject>